package com.wzy.proxy.staticproxy;

//接口 授课方法
public interface ITeacherDao {
    void teach();
}
