@startuml
'https://plantuml.com/class-diagram

interface ITeacherDao{
    teach()
}

class TeacherDao implements ITeacherDao{
    teach()
}

class TeacherDaoProxy implements ITeacherDao {
    TeacherDao subject
    teach()
}


TeacherDaoProxy ...> TeacherDao

class Client{}

Client ...>TeacherDaoProxy

@enduml